--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,7 @@ quests_structures/
 rhino.local.properties
 shaderpacks/
 texturepacks/
-XaeroWaypoints*/
-XaeroWorldMap/
+Xaero*/
 saves/
 screenshots/
 usercache.json
