Removed norundownhouse, TrueEnding now datapack

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ARR files I do not have rights to and may not distribute
-config/openloader/resources/Twilight JAPPA Pack 1.0.0.zip
+config/openloader/resources/TwilightJappaPack.zip
 
 # Various local and/or unused directories/files
 local/
