--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ usernamecache.json
 logs/
 crash-reports/
 knownkeys.txt
+kubejs/README.txt
+*.tmp
 
 # We don't distribute options.txt, we use default options!
 options.txt
