Config adjustments, hide recipes, new translations

--- a/config/jeiintegration-client.toml
+++ b/config/jeiintegration-client.toml
@@ -14,11 +14,11 @@
 	# Configure tooltip for max stack size.
 	maxStackSizeTooltipMode = "disabled"
 	# Configure tooltip for NBT data.
-	nbtTooltipMode = "enabled"
+	nbtTooltipMode = "disabled"
 	# Configure tooltip for registry name. E.g. minecraft:stone
 	registryNameTooltipMode = "disabled"
 	# Configure tooltip for tags. E.g. forge:ingot, minecraft:planks
-	tagsTooltipMode = "enabled"
+	tagsTooltipMode = "disabled"
 	# Configure tooltip for translation key. E.g. block.minecraft.stone
 	translationKeyTooltipMode = "disabled"
 
