--- a/defaultconfigs/forge-server.toml
+++ b/defaultconfigs/forge-server.toml
@@ -6,7 +6,7 @@
 	#Set this to true to remove any Entity (Note: Does not include BlockEntities) that throws an error in its tick method instead of closing the server and reporting a crash log. BE WARNED THIS COULD SCREW UP EVERYTHING USE SPARINGLY WE ARE NOT RESPONSIBLE FOR DAMAGES.
 	removeErroringEntities = false
 	#Set this to true to check the entire entity's collision bounding box for ladders instead of just the block they are in. Causes noticeable differences in mechanics so default is vanilla behavior. Default: false.
-	fullBoundingBoxLadders = false
+	fullBoundingBoxLadders = true
 	#Base zombie summoning spawn chance. Allows changing the bonus zombie summoning mechanic.
 	#Range: 0.0 ~ 1.0
 	zombieBaseSummonChance = 0.1
