--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -130,3 +130,47 @@ hexerei:pestle_and_mortar
 hexerei:plant_picking
 hexerei:potion_mixing
 hexerei:woodcutter
+deepresonance:laser
+deepresonance:purifier
+deepresonance:smelter
+enderio:alloy_smelting
+enderio:enchanter
+enderio:fire_crafting
+enderio:primitive_alloy_smelting
+enderio:sagmilling
+enderio:slicing
+enderio:soul_binding
+enderio:soul_engine
+enderio:tank
+integrateddynamicscompat:drying_basin
+integrateddynamicscompat:mechanical_drying_basin
+integrateddynamicscompat:mechanical_squeezer
+integrateddynamicscompat:squeezer
+thermal:bottler
+thermal:brewer
+thermal:centrifuge
+thermal:chiller
+thermal:compression_fuel
+thermal:crucible
+thermal:crystallizer
+thermal:disenchantment_fuel
+thermal:furnace
+thermal:gourmand_fuel
+thermal:insolator
+thermal:insolator_catalyst
+thermal:lapidary_fuel
+thermal:magmatic_fuel
+thermal:numismatic_fuel
+thermal:press
+thermal:pulverizer
+thermal:pulverizer_catalyst
+thermal:pyrolyzer
+thermal:refinery
+thermal:rock_gen
+thermal:sawmill
+thermal:smelter
+thermal:smelter_catalyst
+thermal:stirling_fuel
+thermal:tree_extractor
+nethersdelight:composition
+twilightdelight:frozen
