New mods, generated configs

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -190,3 +190,8 @@ pneumaticcraft:spawner_extraction
 pneumaticcraft:thermo_plant
 pneumaticcraft:uv_light_box
 pneumaticcraft:yeast_crafting
+aether_redux:infusion
+deep_aether:poison_recipe
+forbidden_arcanus:clibano_combustion
+forbidden_arcanus:hephaestus_forge_upgrading
+forbidden_arcanus:hephaestus_smithing
