--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -195,3 +195,34 @@ deep_aether:poison_recipe
 forbidden_arcanus:clibano_combustion
 forbidden_arcanus:hephaestus_forge_upgrading
 forbidden_arcanus:hephaestus_smithing
+ae2:attunement
+ae2:certus_growth
+ae2:charger
+ae2:condenser
+ae2:entropy
+ae2:inscriber
+ae2:item_transformation
+create_dd:fan_freezing
+create_dd:fan_sanding
+create_dd:fan_seething
+createdieselgenerators:basin_fermenting
+createdieselgenerators:diesel_combustion
+createdieselgenerators:distillation
+destroy:aging
+destroy:centrifugation
+destroy:charging
+destroy:distillation
+destroy:electrolysis
+destroy:extrusion
+destroy:generic_reaction
+destroy:mutation
+destroy:obliteration
+destroy:reaction
+create_new_age:energising
+createaddition:charging
+createaddition:liquid_burning
+createaddition:rolling
+minecraft:block
+minecraft:entity_type
+minecraft:fluid
+minecraft:item
