--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ options.txt
 config/oculus.properties
 config/jeiintegration-client.toml
 
+# This is unused, it will be generated but may as well not clutter VCS
+config/custom-micromaterials.cfg
+
 # This is a PrismLauncher file
 icon.png
 
