--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ options.txt
 # These are updated too often to include in VCS
 config/oculus.properties
 config/jeiintegration-client.toml
+config/attributefix.json
+config/xaerominimap_entities.json
 
 # This is unused, it will be generated but may as well not clutter VCS
 config/custom-micromaterials.cfg
