--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -106,16 +106,6 @@ bloodmagic:arc
 bloodmagic:arcfurnace
 bloodmagic:potion
 bloodmagic:soulforge
-botania:brewery
-botania:elven_trade
-botania:mana_pool
-botania:marimorphosis
-botania:orechid
-botania:orechid_ignem
-botania:petals
-botania:pure_daisy
-botania:runic_altar
-botania:terra_plate
 hexerei:add_to_candle
 hexerei:blood_sigil
 hexerei:book_of_shadows_dye
@@ -226,3 +216,7 @@ minecraft:block
 minecraft:entity_type
 minecraft:fluid
 minecraft:item
+theabyss:arcane_recipe_type
+theabyss:crystal_cutter_recipe_type
+theabyss:infuser_recipe_type
+theabyss:mortar_recipe_type
