Readd Immersive Engineering, Readd Occultism

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -216,7 +216,25 @@ minecraft:block
 minecraft:entity_type
 minecraft:fluid
 minecraft:item
-theabyss:arcane_recipe_type
-theabyss:crystal_cutter_recipe_type
-theabyss:infuser_recipe_type
-theabyss:mortar_recipe_type
+occultism:crushing
+occultism:miner
+occultism:ritual
+occultism:spirit_fire
+immersiveengineering:alloy
+immersiveengineering:arc_furnace
+immersiveengineering:arc_recycling
+immersiveengineering:blast_furnace
+immersiveengineering:blast_furnace_fuel
+immersiveengineering:blueprint
+immersiveengineering:bottling_machine
+immersiveengineering:cloche
+immersiveengineering:coke_oven
+immersiveengineering:crusher
+immersiveengineering:fermenter
+immersiveengineering:fertilizer
+immersiveengineering:metal_press
+immersiveengineering:mixer
+immersiveengineering:refinery
+immersiveengineering:sawmill
+immersiveengineering:squeezer
+occultcreate:spirit_fire_blasting
