--- a/kubejs/config/common.properties
+++ b/kubejs/config/common.properties
@@ -1,6 +1,6 @@
 #KubeJS Common Properties
 #Tue Jul 09 20:40:46 CDT 2024
-matchJsonRecipes=true
+matchJsonRecipes=false
 allowAsyncStreams=true
 announceReload=true
 startupErrorGUI=true
