--- a/config/farmingforblockheads-common.toml
+++ b/config/farmingforblockheads-common.toml
@@ -1,6 +1,5 @@
 #List of names the merchant can have.
-#If you see this and you're active in the MPD discord, ask in my channel to be included >:3
-merchantNames = ["Phoenix492", "davey", "Uni", "Frog the Seed Swapper"]
+merchantNames = ["Phoenix492", "Davey", "Uni", "Frog the Seed Swapper", "Verbina", "Will Sell Seeds for Seeds", "Qwerty"]
 #The range within animals can be fed by the feeding trough.
 #Range: > -2147483648
 feedingTroughRange = 8
