--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ config/spark/tmp/
 patchouli_data.json
 fancymenu_data/last_world.fmdata
 config/spark/activity.json
+.mixin-out/
 
 # We don't distribute options.txt, we use default options!
 options.txt
