--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -228,3 +228,84 @@ immersiveengineering:refinery
 immersiveengineering:sawmill
 immersiveengineering:squeezer
 occultcreate:spirit_fire_blasting
+betterarcheology:identifying
+cyclic:crusher
+cyclic:generator_fluid
+cyclic:generator_item
+cyclic:melter
+cyclic:packager
+cyclic:solidifier
+exposure:photograph_printing
+exposure:photograph_stacking
+nuclearcraft:alloy_smelter
+nuclearcraft:analyzer
+nuclearcraft:assembler
+nuclearcraft:centrifuge
+nuclearcraft:chemical_reactor
+nuclearcraft:crystallizer
+nuclearcraft:decay_hastener
+nuclearcraft:electrolyzer
+nuclearcraft:extractor
+nuclearcraft:fission_boiling
+nuclearcraft:fission_reactor_controller
+nuclearcraft:fluid_enricher
+nuclearcraft:fluid_infuser
+nuclearcraft:fuel_reprocessor
+nuclearcraft:fusion_coolant
+nuclearcraft:fusion_core
+nuclearcraft:gas_scrubber
+nuclearcraft:ingot_former
+nuclearcraft:irradiator
+nuclearcraft:isotope_separator
+nuclearcraft:leacher
+nuclearcraft:manufactory
+nuclearcraft:melter
+nuclearcraft:nc_ore_veins
+nuclearcraft:nuclear_furnace
+nuclearcraft:pressurizer
+nuclearcraft:pump
+nuclearcraft:rock_crusher
+nuclearcraft:steam_turbine
+nuclearcraft:supercooler
+nuclearcraft:turbine_controller
+reliquary:alkahestry_charging
+reliquary:alkahestry_crafting
+reliquary:cauldron
+reliquary:infernal_tear
+reliquary:mortar
+actuallyadditions:coffee_machine
+actuallyadditions:crushing
+actuallyadditions:empowerer
+actuallyadditions:fermenting
+actuallyadditions:laser
+actuallyadditions:mining_lens
+actuallyadditions:pressing
+advgenerators:exchanger_cooling
+advgenerators:exchanger_heating
+advgenerators:syngas_conversion
+advgenerators:turbine_fuels
+advgenerators:turbine_steam
+advgenerators:upgrade
+eidolon:crucible
+eidolon:rituals
+eidolon:worktable
+embers:alchemy
+embers:boiling
+embers:boring
+embers:catalysis_combustion
+embers:dawnstone_anvil
+embers:ember_activation
+embers:excavation
+embers:gaseous_fuel
+embers:melting
+embers:melting_bonus
+embers:metal_coefficient
+embers:mixing
+embers:stamping
+malum:runeworking
+malum:spirit_focusing
+malum:spirit_infusion
+malum:spirit_repair
+malum:spirit_rite
+malum:spirit_transmutation
+malum:weeping_well
