--- a/config/openloader/data/StrangeJourney/data/strangejourney/tags/worldgen/biome/has_structure/stargate_pedestal/stargate_pedestal_otherside_biomes.json
+++ b/config/openloader/data/StrangeJourney/data/strangejourney/tags/worldgen/biome/has_structure/stargate_pedestal/stargate_pedestal_otherside_biomes.json
@@ -4,6 +4,7 @@
 	[
 		{"id": "deeperdarker:deeplands", "required":false},
 		{"id": "deeperdarker:echoing_forest", "required":false},
-		{"id": "deeperdarker:overcast_columns", "required":false}
+		{"id": "deeperdarker:overcast_columns", "required":false},
+		{"id": "deeperdarker:blooming_caverns", "required":false}
 	]
 }
