--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ fancymenu_data/last_world.fmdata
 config/spark/activity.json
 .mixin.out/
 exposures/
+otyacraftengine/
 
 # We don't distribute options.txt, we use default options!
 options.txt
