Ore generation changes, closes #62, closes #64, closes #57, closes #58, closes #59, closes #60

--- a/config/NuclearCraft/materials.toml
+++ b/config/NuclearCraft/materials.toml
@@ -106,7 +106,7 @@
 	zircaloy = true
 	yttrium = true
 	thermoconducting = true
-	thorium = false
+	thorium = true
 	zirconium_molybdenum = true
 	tin = false
 	palladium = true
