--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -197,8 +197,8 @@
 
 	[building.leaf_carpet]
 		#This feature disables itself if any of the following mods are loaded:
-		# - immersive_weathering
 		# - woodworks
+		# - immersive_weathering
 		#This is done to prevent content overlap.
 		#You can turn this on to force the feature to be loaded even if the above mods are also loaded.
 		"Ignore Anti Overlap" = false
@@ -237,8 +237,8 @@
 		#Allowed values: [0,1]
 		"Fall Damage Multiplier" = 0.5
 		#This feature disables itself if any of the following mods are loaded:
-		# - environmental
 		# - goated
+		# - environmental
 		#This is done to prevent content overlap.
 		#You can turn this on to force the feature to be loaded even if the above mods are also loaded.
 		"Ignore Anti Overlap" = false
@@ -246,8 +246,8 @@
 	[building.variant_bookshelves]
 		"Change Names" = true
 		#This feature disables itself if any of the following mods are loaded:
-		# - woodster
 		# - woodworks
+		# - woodster
 		#This is done to prevent content overlap.
 		#You can turn this on to force the feature to be loaded even if the above mods are also loaded.
 		"Ignore Anti Overlap" = false
@@ -266,8 +266,8 @@
 	[building.variant_ladders]
 		"Change Names" = true
 		#This feature disables itself if any of the following mods are loaded:
-		# - woodster
 		# - woodworks
+		# - woodster
 		#This is done to prevent content overlap.
 		#You can turn this on to force the feature to be loaded even if the above mods are also loaded.
 		"Ignore Anti Overlap" = false
@@ -1800,7 +1800,7 @@
 			#To exclude a block from being turned into other blocks, just include the block ID (e.g. minecraft:cobblestone).
 			#To exclude a block from having other blocks turned into it, suffix it with = (e.g. =minecraft:cobblestone_stairs)
 			#To exclude a specific block->variant combination, put = between the two (e.g. minecraft:cobblestone=minecraft:cobblestone_stairs)
-			Blacklist = ["minecraft:snow", "minecraft:bamboo", "minecraft:bamboo_block", "minecraft:mangrove_planks=twilightforest:mangrove_banister", "twilightforest:mangrove_planks=quark:mangrove_vertical_slab", "botania:livingwood_planks=botania:livingwood_slab", "botania:livingwood_planks=botania:livingwood_stairs", "botania:livingwood_planks=botania:livingwood_wall", "botania:dreamwood_planks=botania:dreamwood_slab", "botania:dreamwood_planks=botania:dreamwood_stairs", "botania:dreamwood_planks=botania:dreamwood_wall", "botania:dreamwood=botania:dreamwood_fence", "botania:dreamwood=botania:dreamwood_fence_gate", "botania:livingwood=botania:livingwood_fence", "botana:livingwood=botania:livingwood_fence_gate", "tropicraft:mangrove_planks=twilightforest:mangrove_banister"]
+			Blacklist = ["minecraft:snow", "minecraft:bamboo", "minecraft:bamboo_block", "minecraft:mangrove_planks=twilightforest:mangrove_banister", "twilightforest:mangrove_planks=quark:mangrove_vertical_slab", "botania:livingwood_planks=botania:livingwood_slab", "botania:livingwood_planks=botania:livingwood_stairs", "botania:livingwood_planks=botania:livingwood_wall", "botania:dreamwood_planks=botania:dreamwood_slab", "botania:dreamwood_planks=botania:dreamwood_stairs", "botania:dreamwood_planks=botania:dreamwood_wall", "botania:dreamwood=botania:dreamwood_fence", "botania:dreamwood=botania:dreamwood_fence_gate", "botania:livingwood=botania:livingwood_fence", "botana:livingwood=botania:livingwood_fence_gate", "tropicraft:mangrove_planks=twilightforest:mangrove_banister", "tropicraft:thatch_bundle=quark:thatch_vertical_slab","mowziesmobs:thatch_block"]
 
 	[experimental.villager_rerolling_rework]
 		#If enabled, the first two trades a villager generates for a profession will always be the same for a given villager.
