Disable Voidscape teleportation

--- a/config/voidscape-common.toml
+++ b/config/voidscape-common.toml
@@ -3,5 +3,5 @@
 #
 bedrockTeleportationDimensionBlacklist = []
 #Changes the bedrock teleportation dimension blacklist config to be a whitelist instead
-bedrockTeleportationDimensionWhitelist = false
+bedrockTeleportationDimensionWhitelist = true
 
