--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -342,3 +342,13 @@ mekanism:sps_casing
 mekanism:thermal_evaporation_controller
 mekanismgenerators:fission
 nuclearcraft:mek_chemical_to_fluid
+jeresources:dungeon
+jeresources:enchantment
+jeresources:mob
+jeresources:plant
+jeresources:villager
+jeresources:worldgen
+create:advanced_distillation
+create:casting
+create:coking
+create:industrial_blasting
