--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -161,7 +161,6 @@ thermal:smelter
 thermal:smelter_catalyst
 thermal:stirling_fuel
 thermal:tree_extractor
-nethersdelight:composition
 twilightdelight:frozen
 cookingforblockheads:cow_jar
 pneumaticcraft:amadron_trade
@@ -197,16 +196,6 @@ create_dd:fan_seething
 createdieselgenerators:basin_fermenting
 createdieselgenerators:diesel_combustion
 createdieselgenerators:distillation
-destroy:aging
-destroy:centrifugation
-destroy:charging
-destroy:distillation
-destroy:electrolysis
-destroy:extrusion
-destroy:generic_reaction
-destroy:mutation
-destroy:obliteration
-destroy:reaction
 createaddition:charging
 createaddition:liquid_burning
 createaddition:rolling
@@ -352,3 +341,7 @@ create:advanced_distillation
 create:casting
 create:coking
 create:industrial_blasting
+cobblemon:berry_recipe
+create:polarizing
+create_aquatic_ambitions:aquatic_ambitions.fan_channeling
+mynethersdelight:forgoting
