--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ fancymenu_data/last_world.fmdata
 config/spark/activity.json
 /.mixin.out/
 /exposures/
-/otyacraftengine/
+/config/otyacraftengine/
 /iammusicplayer/
 /data/
 
