New configs and changes

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -343,3 +343,4 @@ cobblemon:berry_recipe
 create:polarizing
 create_aquatic_ambitions:aquatic_ambitions.fan_channeling
 mynethersdelight:forgoting
+create_optical:focusing
