:update configs,fix malum,remove hexeri start book

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -388,3 +388,5 @@ malum:spirit_repair
 malum:spirit_rite
 malum:spirit_transmutation
 malum:weeping_well
+species:cruncher_pellet
+species:goober_goo
