--- a/defaultconfigs/createbigcannons-server.toml
+++ b/defaultconfigs/createbigcannons-server.toml
@@ -58,6 +58,8 @@
 	baseProjectileFluidBounceChance = 0.8999999761581421
 	#.
 	projectilesChangeSurroundings = true
+	#.
+	munitionBlocksCanExplode = true
 
 	#.
 	#Projectile Fuzes
@@ -76,6 +78,15 @@
 		#After the fuze has been in the air for the specified arming time, it will detonate when it gets close enough to a block or entity.
 		#Range: > 0
 		proximityFuzeArmingTime = 20
+		#.
+		#Scale of the area covered by the Proximity Fuze. Larger number means wider area covered
+		#Range: 1 ~ 10
+		proximityFuzeScale = 5
+		#.
+		#[in Blocks]
+		#Spacing of the detection points of the Proximity Fuze.
+		#Range: 0.5 ~ 2.0
+		proximityFuzeSpacing = 1.5
 
 	#.
 	#Grouped Munitions
@@ -126,6 +137,14 @@
 		quickFiringBreechItemPickupDelay = 20
 		#.
 		quickFiringBreechItemGoesToInventory = false
+
+	#.
+	#Damp Big Cannon Propellant
+	[munitions.dampBigCannonPropellant]
+		#.
+		dampPropellantBlocksStartingIgnition = true
+		#.
+		dampPropellantWeakensPropellant = true
 
 #.
 #These values affect the characteristics of cannon materials and cannon structures
@@ -229,26 +248,6 @@
 	#.
 	#When enabled, Cannon Loaders will not break if another contraption is placed on them. Enables legacy behavior.
 	enableIntersectionLoading = false
-
-	[kinetics.stressValues]
-
-		#.
-		#These values affect the stress of Create Big Cannons' mechanical blocks.
-		[kinetics.stressValues.v2]
-
-			#.
-			#
-			#[in Stress Units]
-			#Configure the individual stress impact of mechanical blocks. Note that this cost is doubled for every speed increase it receives.
-			[kinetics.stressValues.v2.impact]
-				bronze_sliding_breech = 12.0
-				cannon_loader = 4.0
-				steel_screw_breech = 16.0
-				cannon_drill = 8.0
-				cast_iron_sliding_breech = 16.0
-				steel_sliding_breech = 32.0
-				nethersteel_screw_breech = 40.0
-				cannon_builder = 8.0
 
 #.
 #These values affect cannon crafting properties.
