Remove IPN world specific configs from VCS

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ otyacraftengine/
 /data/
 /showdown/
 /ESM/
+/config/inventoryprofilesnext
 
 # We don't distribute options.txt, we use default options!
 options.txt
