--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ config/openloader/resources/TwilightJappaPack.zip
 rhino.local.properties
 /shaderpacks/
 /texturepacks/
+/resourcepacks/
 /Xaero*/
 /xaero/
 /saves/
@@ -69,3 +70,6 @@ config/worldedit
 # I finally realized there's no reason to ship this. Once it's time to finalize
 # the list of hidden items, I can just make it a resource pack.
 emi.json
+
+# This is just a library needed by OC2r
+/liboc2rnet.so
