--- a/config/fluffy_fur-client.toml
+++ b/config/fluffy_fur-client.toml
@@ -4,6 +4,8 @@
 	#Intensity of screenshake.
 	#Range: 0.0 ~ 10.0
 	screenshakeIntensity = 1.0
+	#Enable weather render fix in fabulous graphics.
+	fabulousWeatherFix = true
 
 	#Particles
 	[graphics.particles]
