--- a/config/reliquary-common.toml
+++ b/config/reliquary-common.toml
@@ -19,6 +19,8 @@ mobDropsEnabled = true
 	passivePedestal = false
 	#Disable recipes to craft spawn eggs from fragments
 	disableSpawnEggRecipes = true
+	#Disable all charms and their recipes
+	charms = false
 
 #Potions related settings
 [potions]
