--- a/config/witherreincarnated/common.toml
+++ b/config/witherreincarnated/common.toml
@@ -1,9 +1,38 @@
-"Wither Changes Time (default: true)" = true
-"Mobs Avoid Wither (default: true)" = true
-"Wither Possesses Nearby Undead (default: true)" = true
-"Wither Attacks Produce Fire (default: true)" = true
-"Disable Wither Charge Attack (default: false)" = false
-"Disable Wither Laser Attack (default: false)" = false
-"Wither Fire Ignores Mob Griefing (default: false)" = false
-"Vanilla Wither Phases (default: false)" = false
+
+["WITHER: STATS"]
+	"Health (default: 600.0)" = 600.0
+	"Movement Speed (default: 0.0675)" = 0.0675
+	"Wither Skull Damage (default: 16.0)" = 16.0
+	"Wither Skull Explosion Damage (default: 12.0)" = 12.0
+	"Wither Skull Explosion Size (default: 1.5)" = 1.5
+	"Dangerous Wither Skull Damage (default: 22.0)" = 22.0
+	"Dangerous Wither Skull Explosion Damage (default: 18.0)" = 18.0
+	"Dangerous Wither Skull Explosion Size (default: 5.0)" = 5.0
+	"Dangerous Wither Skull Deflected Damage (default: 30.0)" = 30.0
+	"Laser Damage (default: 3.0)" = 3.0
+	"Charge Damage (default: 30.0)" = 30.0
+
+["WITHER: AI"]
+	"Disable Charge Attack (default: false)" = false
+	"Min Charge Cooldown (in ticks, default: 80)" = 80
+	"Max Charge Cooldown (in ticks, default: 260)" = 260
+	"Min Charge Cooldown (Final Phase) (in ticks, default: 40)" = 40
+	"Max Charge Cooldown (Final Phase) (in ticks, default: 200)" = 200
+	"Disable Laser Attack (default: false)" = false
+	"Min Laser Cooldown (in ticks, default: 300)" = 300
+	"Max Laser Cooldown (in ticks, default: 900)" = 900
+	"Max Laser Length (default: 128)" = 128
+	"Disable Barrage Attack (default: false)" = false
+	"Min Barrage Cooldown (in ticks, default: 1200)" = 1200
+	"Max Barrage Cooldown (in ticks, default: 3600)" = 3600
+
+["WITHER: OTHER"]
+	"Changes Time (default: true)" = true
+	"Possesses Nearby Undead (default: true)" = true
+	"Attacks Produce Fire (default: true)" = true
+	"Fire Ignores Mob Griefing (default: false)" = false
+	"Vanilla Phases (default: false)" = false
+
+[MISC]
+	"Mobs Avoid Wither (default: true)" = true
 
