--- a/config/malum-common.toml
+++ b/config/malum-common.toml
@@ -27,7 +27,7 @@
 
 [codex]
 	#If set to true, the first undead enemy a player slays will drop the encyclopedia arcana.
-	enableCodexDrop = true
+	enableCodexDrop = false
 
 [compat]
 
